<resources>
    <string name="app_name">JalIhara</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>

    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="about_us_welcome">At JalIhara, we believe that art has the power to inspire, engage, and transform lives. We are a dedicated team of art enthusiasts and technology professionals who have come together to create a seamless platform for discovering and booking your favorite art performances.</string>

    <string name="our_missions">Our mission is to connect art lovers with exceptional performances and provide a convenient, user-friendly experience for discovering and securing tickets. We strive to be the go-to destination for art enthusiasts, offering a diverse range of performances that cater to every taste and preference.</string>

    <string name="dicover">JalIhara provides a curated selection of art performances, including theater, dance, music, and more. Whether you are a seasoned theatergoer or a curious newcomer, our platform allows you to explore an array of shows and discover new artists, genres, and venues. With JalIhara, you can broaden your horizons and embark on unforgettable artistic experiences.</string>

    <string name="secure">We understand the importance of hassle-free ticketing, which is why we have designed our app to be intuitive and user-friendly. With just a few taps, you can search for performances, view seating options, and securely purchase your tickets. Our commitment to data security ensures that your personal information and payment details are always protected.</string>

    <string name="join_us">We invite you to embark on a journey of artistic discovery with JalIhara. Whether you are looking for a night of riveting theater, mesmerizing dance, soulful music, or any other form of artistic expression, we are here to connect you with the performances that speak to your soul.</string>

    <string name="contact_us1">We are here to help and answer any questions you may have. Whether you need assistance with ticket purchases, have feedback to share, or simply want to reach out, our team at JalIhara is ready to assist you.</string>
    <string name="contact_us2">Our dedicated customer support team is available to provide prompt and friendly assistance. If you have any inquiries regarding ticket bookings, event details, or account-related matters, please do not hesitate to get in touch. We value your experience with JalIhara and strive to address any concerns promptly.</string>

    <string name="reach_us">We appreciate your patience and will make every effort to respond to your inquiries as quickly as possible. Our goal is to ensure that you have a smooth and enjoyable experience using JalIhara.</string>

</resources>