<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbars="none"
    tools:context=".ui.aboutUs.TabAboutUsFragment">

<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingBottom="40dp">

    <ImageView
        android:id="@+id/imageViewLogo"
        android:layout_width="match_parent"
        android:layout_height="285dp"
        android:src="@drawable/logo_bg"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/about_us_welcome"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageViewLogo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:justificationMode="inter_word"
        android:paddingHorizontal="15dp"
        android:paddingVertical="15dp"
        android:text="Welcome to JalIhara"
        android:textStyle="bold"
        android:textSize="18sp"
        android:textColor="@color/black"/>


    <TextView
        android:id="@+id/about_us_welcome1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/about_us_welcome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:justificationMode="inter_word"
        android:paddingHorizontal="15dp"
        android:paddingBottom="15dp"
        android:text="@string/about_us_welcome"
        android:textColor="@color/black"/>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/linear1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/blue_primary"
        android:padding="15dp"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@id/about_us_welcome1"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Our Missions"
            android:textAlignment="center"
            android:textSize="24sp"
            android:textColor="@color/white"
            android:textStyle="bold"/>

        <ImageView
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:src="@drawable/mission"
            android:layout_margin="15dp"
            android:layout_gravity="center"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/our_missions"
            android:textColor="@color/white"
            android:justificationMode="inter_word"/>

    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/linear2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:padding="15dp"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@id/linear1"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Explore and Discover"
            android:textAlignment="center"
            android:textSize="24sp"
            android:textColor="@color/blue_primary"
            android:textStyle="bold"/>

        <ImageView
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:src="@drawable/explore"
            android:layout_margin="15dp"
            android:layout_gravity="center"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/dicover"
            android:textColor="@color/black"
            android:justificationMode="inter_word"/>

    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/linear3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/blue_primary"
        android:padding="15dp"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@id/linear2"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Simple and Secure"
            android:textAlignment="center"
            android:textSize="24sp"
            android:textColor="@color/white"
            android:textStyle="bold"/>

        <ImageView
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:src="@drawable/shield"
            android:layout_margin="15dp"
            android:layout_gravity="center"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/secure"
            android:textColor="@color/white"
            android:justificationMode="inter_word"/>

    </androidx.appcompat.widget.LinearLayoutCompat>


    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/linear4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:padding="15dp"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@id/linear3"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Join Us"
            android:textAlignment="center"
            android:textSize="24sp"
            android:textColor="@color/blue_primary"
            android:textStyle="bold"/>

        <ImageView
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:src="@drawable/deal"
            android:layout_margin="15dp"
            android:layout_gravity="center"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/join_us"
            android:textColor="@color/black"
            android:justificationMode="inter_word"/>

    </androidx.appcompat.widget.LinearLayoutCompat>

</androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>