<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbars="none"
    tools:context=".ui.aboutUs.TabAboutUsFragment">
<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="40dp">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/linear1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/contact_us_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingVertical="15dp"
            android:justificationMode="inter_word"
            android:text="We Are Here For You!"
            android:textColor="@color/blue_primary"
            android:textStyle="bold"
            android:textSize="24sp"
            android:textAlignment="center" />

        <ImageView
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:src="@drawable/support"
            android:layout_margin="15dp"
            android:layout_gravity="center"/>

        <TextView
            android:id="@+id/contact_us1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingHorizontal="15dp"
            android:justificationMode="inter_word"
            android:text="@string/contact_us1"
            android:textColor="@color/black"/>

        <TextView
            android:id="@+id/contact_us2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingHorizontal="15dp"
            android:justificationMode="inter_word"
            android:layout_marginVertical="15dp"
            android:text="@string/contact_us2"
            android:textColor="@color/black"/>

    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/layout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="15dp"
        android:background="@color/blue_primary"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@+id/linear1"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/reach_us_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="15dp"
            android:justificationMode="inter_word"
            android:text="Reach Us Out!"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:textSize="24sp"
            android:textAlignment="center" />

        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:columnCount="2">

            <androidx.appcompat.widget.LinearLayoutCompat
                android:id="@+id/inner1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_columnWeight="1"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent">

                <ImageView
                    android:layout_width="70dp"
                    android:layout_height="70dp"
                    android:layout_gravity="center"
                    android:src="@drawable/mail"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:justificationMode="inter_word"
                    android:text="jalihara@gmail.com"
                    android:textColor="@color/white"
                    android:textAlignment="center" />

            </androidx.appcompat.widget.LinearLayoutCompat>

            <androidx.appcompat.widget.LinearLayoutCompat
                android:id="@+id/inner2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_columnWeight="1"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent">

                <ImageView
                    android:layout_width="70dp"
                    android:layout_height="70dp"
                    android:layout_gravity="center"
                    android:src="@drawable/web"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:justificationMode="inter_word"
                    android:text="www.jalihara.com"
                    android:textColor="@color/white"
                    android:textAlignment="center" />

            </androidx.appcompat.widget.LinearLayoutCompat>

        </GridLayout>

        <ImageView
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_marginTop="15dp"
            android:layout_gravity="center"
            android:src="@drawable/location"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:justificationMode="inter_word"
            android:text="Jl. 123 Elmore Bogor, Indonesia"
            android:textColor="@color/white"
            android:textAlignment="center" />


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingVertical="15dp"
            android:justificationMode="inter_word"
            android:text="@string/reach_us"
            android:textColor="@color/white"/>



    </androidx.appcompat.widget.LinearLayoutCompat>


</androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>